# recreate-git

./: .gitignore  CMakeLists.txt  README.md  aggregate_code.py  build.sh  combined_code.txt  test.md  your_program.sh
.github/workflows/: ci.yml
docs/: clone_deep_dive.md  git_internals.md
src/: main.cpp
src/commands/: cat_file.cpp  clone.cpp  commit_tree.cpp  hash_object.cpp  init.cpp  ls_tree.cpp  write_tree.cpp
src/include/: cat_file.h  checkout_utils.h  clone.h  commit_tree.h  constants.h  hash_object.h  init.h  ls_tree.h  object_utils.h  packfile_utils.h  pkt_line_utils.h  sha1_utils.h  time_utils.h  tree_parser.h  write_tree.h  zlib_utils.h
src/utils/: checkout_utils.cpp  object_utils.cpp  packfile_utils.cpp  pkt_line_utils.cpp  sha1_utils.cpp  time_utils.cpp  tree_parser.cpp  zlib_utils.cpp
tests/: run_all_tests.sh  test_cat_file.sh  test_clone.sh  test_commit_tree.sh  test_commit_tree_with_parent.sh  test_hash_object.sh  test_ls_tree.sh  test_ls_tree_full.sh  test_write_tree.sh
tests/tmp_test/: packfile_reader  packfile_reader.cpp
